/*
 * Copyright (c) 2020 gematik GmbH
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *    http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package de.gematik.ti.openhealthcard.common.exceptions.runtime;

/**
 * If a method is called on wrong thread
 *
 */
public class WrongThreadException extends RuntimeException {
    /**
     * Constructs a new WrongThreadException with the specified detail message.
     * 
     * @param message
     *            detail message
     */
    public WrongThreadException(final String message) {
        super(message);
    }

    /**
     * Constructs a new WrongThreadException with the specified detail message and cause
     * 
     * @param message
     *            detail message
     * @param cause
     *            - the cause of this exception or null
     */
    public WrongThreadException(final String message, final Exception cause) {
        super(message, cause);
    }
}
