@startuml

title __OPENHEALTHCARD.COMMON's Class Diagram__\n

  namespace de.gematik.ti.openhealthcard.common {
    abstract class de.gematik.ti.openhealthcard.common.AbstractAndroidCardReaderController {
    }
  }
  

  namespace de.gematik.ti.openhealthcard.common {
    class de.gematik.ti.openhealthcard.common.BuildConfig {
    }
  }
  

  namespace de.gematik.ti.openhealthcard.common {
    class de.gematik.ti.openhealthcard.common.WaitingPermissionReceiver {
    }
  }
  

  namespace de.gematik.ti.openhealthcard.common {
    namespace exceptions.runtime {
      class de.gematik.ti.openhealthcard.common.exceptions.runtime.NotInitilizedWithContextException {
      }
    }
  }
  

  namespace de.gematik.ti.openhealthcard.common {
    namespace exceptions.runtime {
      class de.gematik.ti.openhealthcard.common.exceptions.runtime.WrongThreadException {
      }
    }
  }
  

  namespace de.gematik.ti.openhealthcard.common {
    namespace interfaces {
      interface de.gematik.ti.openhealthcard.common.interfaces.IAndroidCardReaderController {
      }
    }
  }
  

  de.gematik.ti.openhealthcard.common.AbstractAndroidCardReaderController .up.|> de.gematik.ti.openhealthcard.common.interfaces.IAndroidCardReaderController
  de.gematik.ti.openhealthcard.common.AbstractAndroidCardReaderController -up-|> de.gematik.ti.cardreader.provider.api.AbstractCardReaderController
  de.gematik.ti.openhealthcard.common.WaitingPermissionReceiver -up-|> android.content.BroadcastReceiver


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
